force-app/main/default/objects/Payment_Plan__c/Payment_Plan__c.object-meta.xml
<CustomObject>
    <description>This object stores the payment plan information for a Liability, tied to a Liable Party for a Citation.</description>
    <label>Payment Plan</label>
    <nameField>
        <displayFormat>PP-{000000}</displayFormat>
        <label>Payment Plan ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Payment Plans</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>