force-app/main/default/objects/Payment_Plan__c/fields/Agreed_Payment_Method__c.field-meta.xml
<CustomField>
    <fullName>Agreed_Payment_Method__c</fullName>
    <label>Agreed Payment Method</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Adjustment</fullName>
            </value>
            <value>
                <fullName>Cash</fullName>
            </value>
            <value>
                <fullName>Cashier’s check</fullName>
            </value>
            <value>
                <fullName>Check</fullName>
            </value>
            <value>
                <fullName>Credit Card</fullName>
            </value>
            <value>
                <fullName>Deductions</fullName>
            </value>
            <value>
                <fullName>Direct Deposit</fullName>
            </value>
            <value>
                <fullName>Direct Payment</fullName>
            </value>
            <value>
                <fullName>Electronic Funds Transfer</fullName>
            </value>
            <value>
                <fullName>Money Order</fullName>
            </value>
            <value>
                <fullName>Party to Party</fullName>
            </value>
            <value>
                <fullName>Reversal</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>