force-app/main/default/objects/Payment_Plan__c/fields/Date_of_First_Payment__c.field-meta.xml
<CustomField>
    <fullName>Date_of_First_Payment__c</fullName>
    <label>Date of First Payment</label>
    <required>true</required>
    <type>Date</type>
</CustomField>