force-app/main/default/objects/Payment_Plan__c/fields/Due_Date__c.field-meta.xml
<CustomField>
    <fullName>Due_Date__c</fullName>
    <description>Populated by the Payment Plan Flow on Payment Plan creation, then subsequently by the Case Payment Flow on Case Payment allocation when that Case Payment is parented to a Payment Plan.</description>
    <inlineHelpText>Auto-populated on save or update. On Payment Plan creation, this date will be the Date of First Payment. Due Date is then advanced based upon Frequency and multiples of Regular Payment Amounts received.</inlineHelpText>
    <label>Due Date</label>
    <type>Date</type>
</CustomField>