force-app/main/default/objects/Payment_Plan__c/fields/Number_of_Payments__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Payments__c</fullName>
    <inlineHelpText>Expected number of payments on this plan, excluding initial down payment.</inlineHelpText>
    <label>Number of Payments</label>
    <precision>3</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>