force-app/main/default/objects/Payment_Plan__c/fields/Payment_Day_or_Month__c.field-meta.xml
<CustomField>
    <fullName>Payment_Day_or_Month__c</fullName>
    <formula>CASE(
	TEXT(Frequency__c),
	"Weekly", "Every week on " &amp; TEXT(Day_of_Week_Payment_Due__c),
	"Bi-Weekly", "Every two weeks on " &amp; TEXT(Day_of_Week_Payment_Due__c),
	"Semi-Monthly", "Twice a month on the " &amp; TEXT(Day_of_Monthly_Payment_Due__c) &amp;
		CASE(
			TEXT(Day_of_Monthly_Payment_Due__c),
			"1", "st",
			"2", "nd",
			"3", "rd",
			"21", "st",
			"22", "nd",
			"23", "rd",
			"31", "st",
			"th") &amp; " and " &amp; TEXT(Day_of_Second_Monthly_Payment_Due__c) &amp;
		CASE(
			TEXT(Day_of_Second_Monthly_Payment_Due__c),
			"1", "st",
			"2", "nd",
			"3", "rd",
			"21", "st",
			"22", "nd",
			"23", "rd",
			"31", "st",
			"th"),
	"Monthly", "Every month on the " &amp; TEXT(Day_of_Monthly_Payment_Due__c) &amp;
		CASE(
			TEXT(Day_of_Monthly_Payment_Due__c),
			"1", "st",
			"2", "nd",
			"3", "rd",
			"21", "st",
			"22", "nd",
			"23", "rd",
			"31", "st",
			"th"),
	"Quarterly", "Every 3 months on the " &amp; TEXT(Day_of_Monthly_Payment_Due__c) &amp;
		CASE(
			TEXT(Day_of_Monthly_Payment_Due__c),
			"1", "st",
			"2", "nd",
			"3", "rd",
			"21", "st",
			"22", "nd",
			"23", "rd",
			"31", "st",
			"th"),
	"Single", "One single payment on " &amp; TEXT(Date_of_First_Payment__c),
	"Irregular", "Irregular",
	"Not specified"
)</formula>
    <label>Payment Day or Month</label>
    <type>Text</type>
</CustomField>