force-app/main/default/objects/Payment_Plan__c/fields/Payment_Plan_Agreement_Date__c.field-meta.xml
<CustomField>
    <fullName>Payment_Plan_Agreement_Date__c</fullName>
    <inlineHelpText>Date this Payment Plan is expected to be paid off.</inlineHelpText>
    <label>Payment Plan Agreement Date</label>
    <type>Date</type>
</CustomField>