force-app/main/default/objects/Payment_Plan__c/fields/Payment_Plan_Balance_Due__c.field-meta.xml
<CustomField>
    <fullName>Payment_Plan_Balance_Due__c</fullName>
    <label>Payment Plan Balance Due</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>