force-app/main/default/objects/Payment_Plan__c/fields/Payment_Plan_Current__c.field-meta.xml
<CustomField>
    <fullName>Payment_Plan_Current__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Payment Plan Current</label>
    <type>Checkbox</type>
</CustomField>