force-app/main/default/objects/Payment_Plan__c/fields/Payment_Plan_for_Self_Audit__c.field-meta.xml
<CustomField>
    <fullName>Payment_Plan_for_Self_Audit__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Payment Plan for Self-Audit?</label>
    <type>Checkbox</type>
</CustomField>