force-app/main/default/objects/Payment_Plan__c/fields/Payment_Plan_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Payment_Plan_Start_Date__c</fullName>
    <label>Start Date</label>
    <required>true</required>
    <type>Date</type>
</CustomField>