force-app/main/default/objects/Payment_Plan__c/fields/Payment_Plan_Status__c.field-meta.xml
<CustomField>
    <fullName>Payment_Plan_Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Current</fullName>
            </value>
            <value>
                <fullName>Not Current</fullName>
            </value>
            <value>
                <fullName>Satisfied</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>