force-app/main/default/objects/Payment_Plan__c/fields/Payment_Plan_Total_Amount_Due__c.field-meta.xml
<CustomField>
    <fullName>Payment_Plan_Total_Amount_Due__c</fullName>
    <inlineHelpText>Total due on payment plan when plan is created. Includes any Down Payment.</inlineHelpText>
    <label>Payment Plan Total</label>
    <precision>18</precision>
    <required>true</required>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>