force-app/main/default/objects/Payment_Plan__c/fields/Restitution_Begin_Date__c.field-meta.xml
<CustomField>
    <fullName>Restitution_Begin_Date__c</fullName>
    <description>Restitution Period is the time during which the liable party has agreed to make payments. The entire balance is to be paid in full by the Restitution End Date</description>
    <inlineHelpText>Date first payment of payment plan is due.</inlineHelpText>
    <label>Restitution Begin Date</label>
    <type>Date</type>
</CustomField>