force-app/main/default/objects/Payment_Plan__c/fields/Scheduled_Payoff_Date__c.field-meta.xml
<CustomField>
    <fullName>Scheduled_Payoff_Date__c</fullName>
    <label>Scheduled Payoff Date</label>
    <type>Date</type>
</CustomField>