force-app/main/default/objects/Payment_Plan__c/fields/Writ__c.field-meta.xml
<CustomField>
    <fullName>Writ__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Writ that setup this Payment Plan</description>
    <inlineHelpText>Writ that setup this Payment Plan</inlineHelpText>
    <label>Writ</label>
    <referenceTo>Writ__c</referenceTo>
    <relationshipLabel>Payment Plans</relationshipLabel>
    <relationshipName>Payment_Plans</relationshipName>
    <type>Lookup</type>
</CustomField>