force-app/main/default/objects/Payment_Plan__c/validationRules/Day_of_1st_Pay_Same_as_Monthly_Day.validationRule-meta.xml
<ValidationRule>
    <fullName>Day_of_1st_Pay_Same_as_Monthly_Day</fullName>
    <active>true</active>
    <description>For a Monthly Frequency, the day number of Date_of_First_Payment__c must be the same as the Day_of_Monthly_Payment_Due__c. This enables the Case Payment Flow to properly calculate the next due date and overdue status.</description>
    <errorConditionFormula>ISPICKVAL(Frequency__c, 'Monthly') &amp;&amp;
(
    DAY(Date_of_First_Payment__c) &lt;&gt; VALUE(TEXT(Day_of_Monthly_Payment_Due__c))
)</errorConditionFormula>
    <errorDisplayField>Date_of_First_Payment__c</errorDisplayField>
    <errorMessage>For a monthly Frequency, the day number of Date of First Payment must be the same as the Day of Monthly Payment Due</errorMessage>
</ValidationRule>