force-app/main/default/objects/Payment_Plan__c/validationRules/JEU_Refer_can_not_be_Current.validationRule-meta.xml
<ValidationRule>
    <fullName>JEU_Refer_can_not_be_Current</fullName>
    <active>false</active>
    <description>If you attempt to refer a case to JEU, the payment plan must not be current.</description>
    <errorConditionFormula>ISPICKVAL(Payment_Plan_Status__c, "Current") &amp;&amp; ISPICKVAL( Case__r.Refer_to_JEU__c, "Referred")</errorConditionFormula>
    <errorMessage>You can not refer a case to JEU when the payment plan is current.</errorMessage>
</ValidationRule>