force-app/main/default/objects/Payment_Plan__c/validationRules/No_Payment_Plans_on_Closed_Case.validationRule-meta.xml
<ValidationRule>
    <fullName>No_Payment_Plans_on_Closed_Case</fullName>
    <active>false</active>
    <description>RCI - Payment Plans cannot be created/edited for a closed case.</description>
    <errorConditionFormula>(Case__r.RecordType.DeveloperName="RCI") &amp;&amp;
(Case__r.Closed__c=TRUE)</errorConditionFormula>
    <errorMessage>Payment Plans cannot be created/edited for a closed case. Please submit the case for approval to be re-opened.</errorMessage>
</ValidationRule>