force-app/main/default/objects/Payment_Plan__c/validationRules/RCI_to_JEU_Approval_Status_Pending.validationRule-meta.xml
<ValidationRule>
    <fullName>RCI_to_JEU_Approval_Status_Pending</fullName>
    <active>false</active>
    <errorConditionFormula>(Case__r.RecordType.Name="RCI") &amp;&amp;
ISPICKVAL(Approval_Status__c,"Pending") &amp;&amp;
NOT($UserRole.Name="System Administrator")</errorConditionFormula>
    <errorMessage>You may not edit the record while the Payment Plan is Pending Approval.</errorMessage>
</ValidationRule>